fix(test+docs): repair CI + add missing tests + business docs for wave SaaS (#315)
* fix(test): repair broken tests + add missing tests for GAP-091→096

Fix 2 broken test files and add 4 new test files covering ~1940 lines
of production code from PRs #311-314 that shipped without tests.

Fixed:
- EmailServiceClientTest: add missing EmailConfigProperties mock (4th
  constructor param added in GAP-096)
- DatabaseBackupSchedulerTest: rewrite to match refactored production
  code that delegates to DatabaseBackupService and InstancePurgeService

New test files:
- DatabaseBackupServiceTest: backup lifecycle, verify checksum, cleanup
- BackupStorageServiceTest: mock mode vs real S3 client behavior
- InstancePurgeServiceTest: happy path, SKIPPED_NO_BACKUP safety check,
  wrong status rejection, findPurgeEligible, adminPurge
- EmailAdminServiceTest: history pagination, stats, config, triggers

Updated:
- InstanceServiceTest: add re-trial prevention tests (TR-07) for
  registerInstance, plus missing TokenService/DataSourceConfig mocks
- application-test.yml: add storage.s3 and backup config keys

* docs(business): update api-contract + rules for email admin + hard purge

* fix(test): add MockBean RabbitTemplate to integration tests

RabbitAutoConfiguration excluded in test profile but EmailServiceClient
constructor requires RabbitTemplate — provide @MockBean in all 3 IT files.

* fix(subscription): add subscription.domain to EntityScan for BackupRecord

BackupRecord entity in com.kitehub.subscription.domain was not scanned
because EntityScan only covered com.kitehub.platform.domain.entity.